@@ -14,7 +14,7 @@
 	<name>company-management</name>
 	<description>Company Management</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>20</java.version>
 		<spring-cloud.version>2021.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -148,6 +148,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -195,6 +200,7 @@
 						</path>
 
 					</annotationProcessorPaths>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
